# AETHER-PROTOCOL-P

./: .env.example  .gitignore  .mcp.json  AETHER_SYSTEMS_SHEET.txt  README.md  RELEASE_NOTES.md  agent_activity.py  agent_pipeline.py  api_key_middleware.py  api_server.py  license_client.py  main.py  mcp_agent_status.py  mcp_router.py  project_context.py  project_orchestrator.py  project_routes.py  readme.md  requirements.txt  task_decomposer.py  vault_spaces.py
.github/: dependabot.yml
aether_protocol/: __init__.py  async_protocol.py  async_protocol.pyi  audit.py  audit.pyi  commitment.py  commitment.pyi  dispute_report.py  dispute_report.pyi  ephemeral_signer.py  ephemeral_signer.pyi  execution.py  execution.pyi  quantum_backend.py  quantum_backend.pyi  quantum_crypto.py  quantum_crypto.pyi  quantum_session.py  server.py  settlement.py  settlement.pyi  state.py  state.pyi  terminal_ui.py  terminal_ui.pyi  timestamp_authority.py  timestamp_authority.pyi  verify.py  verify.pyi
aethercloud/: DEPLOY_WALKTHROUGH.md  STRIPE_WEBHOOK_SETUP.md  VERCEL_ENV_VARS.md  deploy.sh
agent/: __init__.py  aetherbrowser_client.py  browser_tool_injector.py  claude_agent.py  file_agent.py  hardened_claude_agent.py  intent.py  mcp_registry.py  organizer.py  qopc_agent.py  qopc_feedback.py  qopc_interaction_style.py  skill-loader.js  suggest.py  task_qopc.py  task_scheduler.py  voice_profiles.py
auth/: __init__.py  login.py  mfa.py  session.py
config/: __init__.py  agent_prompt.py  key_manager.py  settings.py  storage.py
deploy/: DEPLOY_LOG.md  README.md  aether.service  commit-uvt-stack.sh  deploy.sh  env.example  healthcheck.sh  nginx.conf  replay_dlq.py  rollback.sh  vps1-deploy.sh  vps1-paste.sh  vps2-lockdown.sh  vps2-runbook.md  vps3-deploy.sh  vps3-paste.sh  vps3-relay.sh
desktop/: .gitignore  analysis-cache.js  auth-store.js  build-dist.ps1  key-manager.js  main.js  package-lock.json  package.json  preload.js  telemetry.js
desktop-installer/: .gitignore  README.md  package-lock.json  package.json
desktop-installer/src-tauri/: Cargo.toml  tauri.conf.json
desktop-installer/src-tauri/capabilities/: default.json
desktop-installer/src-tauri/src/: cleanup.rs  commands.rs  download.rs  errors.rs  install_manifest.rs  installer.rs  lib.rs  main.rs  manifest.rs  payload.rs  telemetry.rs
desktop-installer/src-tauri/tests/: e2e.rs  telemetry_test.rs
desktop-installer/src-tauri/tests/fixtures/: test-signed-manifest.json  test-signed-manifest.sig
diagrams/: docs_router_architecture.md
docs/: SMOKE_TEST_v0.9.5.md
lib/: __init__.py  context_compressor.py  feature_flags.py  health_routes.py  license_validation.py  model_registry.py  pricing_guard.py  qopc_bridge.py  router.py  router_client.py  token_accountant.py  uvt_routes.py
mcp_worker/: .env.example  __init__.py  agent_executor.py  breach_alerter.py  node_auth.py  requirements.txt  (+2 more)
(+384 files in other folders)
