[package]
name = "aethercloud-installer"
version = "1.0.0"
edition = "2021"
description = "AetherCloud branded installer wizard"
authors = ["Aether Systems LLC"]
license = "UNLICENSED"

[lib]
name = "aethercloud_installer"
path = "src/lib.rs"

[[bin]]
name = "aethercloud-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
